# minimal_example_for_rust_81262

./: Cargo.toml  LICENSE
src/: main.rs
