[package]
name = "minimal_example_for_81262"
version = "0.1.0"
authors = ["Georg Semmler <github@weiznich.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
32-column-tables = []
64-column-tables = ["32-column-tables"]
128-column-tables = ["64-column-tables"]
